@@ -5,8 +5,8 @@ Given a vector of genes, this function will return the enrichment GO
 categories with FDR control.}
 \usage{
   enrichGO(gene, organism = "human", ont = "MF",
-    pvalueCutoff = 0.05, qvalueCutoff = 0.05,
-    readable = FALSE)
+    pvalueCutoff = 0.05, pAdjustMethod = "BH", universe,
+    minGSSize = 5, readable = FALSE)
 }
 \arguments{
   \item{gene}{a vector of entrez gene id.}
@@ -18,10 +18,15 @@ categories with FDR control.}
 
   \item{pvalueCutoff}{Cutoff value of pvalue.}
 
-  \item{qvalueCutoff}{Cutoff value of qvalue.}
+  \item{pAdjustMethod}{one of "holm", "hochberg", "hommel",
+  "bonferroni", "BH", "BY", "fdr", "none"}
 
-  \item{readable}{if readable is TRUE, the gene IDs will
-  mapping to gene symbols.}
+  \item{universe}{background genes}
+
+  \item{minGSSize}{minimal size of genes annotated by
+  Ontology term for testing.}
+
+  \item{readable}{whether mapping gene ID to gene Name}
 }
 \value{
   A \code{enrichResult} instance.
